src/objects/Case_instruction__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Case instruction (SDI)</description>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Word1__c</fullName>
        <label>Key Word1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word2__c</fullName>
        <label>Key Word2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word3__c</fullName>
        <label>Key Word3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <type>DateTime</type>
    </fields>
    <label>Case instruction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>endDate__c</columns>
        <columns>startDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>endDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SDI_Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>